Update birthday message in index.html

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <div class="card">
             <h2 style="font-family: 'Pacifico', cursive; color: var(--accent);">A Special Note</h2>
             <p class="message">
-                Write your message here. Tell her how amazing she is, recall your favorite memory together, and make a wish for her future. This is your moment to be sweet!
+                “Happy Birthday! It’s me, Vir Vaibhav. I hope you achieve all your dreams and always keep smiling. ✨🌸”
             </p>
         </div>
 
