Update image source and modify birthday message

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         <div class="leg"></div>
                     </div>
                     <div class="face-container">
-                        <img src="media.jpg" alt="Face">
+                        <img src="Face.jpg" alt="Face">
                     </div>
                 </div>
 
@@ -391,7 +391,7 @@
 
         <div class="message-card">
             <p class="message">
-                “Happy Birthday! It’s me, Vir Vaibhav. I hope you achieve all your dreams and always keep smiling. ✨🌸”
+                “Happy Birthday! It’s me, Vir Vaibhav. I hope you achieve all your dreams and always keep smiling. ✨🌸 -to siddhi”
             </p>
         </div>
 
